feat: avoid generic exception handling
Introduces TokenException which is returned/thrown on any token
resolve exception.
Wrap all the required exception wherever required